# Qync

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Qync.Doxyfile  Qync.pro  qync.Doxyfile  qync.kdev4  qync.qbs  todo.txt
doc/: license_cwrsync.dox  license_cygwin.dox  license_openssh.dox  license_putty.dox  mainpage.dox
docs/: docs.qbs  license_rsync.dox  mainpage.dox  namespaces.dox
resources/: icons.qrc  toolbaricons.qrc
resources/icons/: application.xpm  application128.xpm  application16.xpm  application22.xpm  application24.xpm  application256.xpm  application32.xpm  application48.xpm  application64.xpm
src/: GuiPreferences.cpp  GuiPreferences.h  MainWindow.cpp  MainWindow.h  Manager.cpp  Manager.h  Preferences.cpp  PreferencesDialogue.cpp  PreferencesDialogue.h  Preset.cpp  Preset.h  Process.cpp  Process.h  ProcessDialogue.cpp  ProcessDialogue.h  QyncGuiPreferences.cpp  QyncGuiPreferences.h  QyncMainWindow.cpp  QyncMainWindow.h  QyncManager.cpp  QyncManager.h  QyncPreferences.cpp  QyncPreferences.h  QyncPreferencesDialogue.cpp  QyncPreferencesDialogue.h  QyncPreferencesWindow.cpp  QyncPreset.cpp  QyncPreset.h  QyncProcess.cpp  QyncProcess.h  QyncProcessDialogue.cpp  QyncProcessDialogue.h  aboutdialogue.cpp  aboutdialogue.h  application.cpp  application.h  common.cpp  common.h  functions.cpp  functions.h  (+41 more)
src/ui/: mainwindow.ui  notificationwidget.ui  preferencesdialogue.ui  processdialogue.ui  sourcedestinationwidget.ui
tools/: get_doxygen_output_path.sh  open_doxygen_docs.sh  run_doxygen.sh  update_build_id_string.sh
ui/: aboutdialogue.ui  mainwindow.ui  notificationwidget.ui  preferencesdialogue.ui  processdialogue.ui  processwidget.ui  sourcedestinationwidget.ui
